--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="style.css">
 
 <!-- Fonts -->
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
     href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,700;1,200&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-
 <!-- End Fonts -->
 
 </head>
@@ -24,7 +22,7 @@
         <header>
             <nav>
                 <a id="logo" href="http://">
-                    <img src="images/logo.svg" alt="imagem do logo Treine.me" srcset="">
+                    <img src="./images/logo.svg" alt="imagem do logo Treine.me" srcset="">
                 </a>
 
                     <ul>
