--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 Invista no seu corpo e <strong>tenha muito mais performace</strong> e qualidade na sua vida.</p>
 
                 <button>
-                    <img src="./images/whats.svg" alt="iconer do whatsapp">
+                    <img src="./images/whats.svg" alt="icone do whatsapp">
                     comece já
             </section>
 
-            <img src="./images/img.png" alt="Desenho de uma mulher pulando corda">
+            <img src="./images/img.png" alt="Desenho de uma mulher pulando corda em uma academia">
         </main>
         
         <footer>
